feature: adding notification feat
